# pytest-universal-indirection

./: MANIFEST.in  README.md  pylint.toml  pyproject.toml
pytest_universal_indirection/: __init__.py  _common.py  simple.py
pytest_universal_indirection/plugin/: __init__.py  simple.py
